--- a/data_cleanup.ipynb
+++ b/data_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -90,8 +90,8 @@
     "    # reading the CSV\n",
     "    df = pd.read_csv('raw_data/'+ platform + '_games.csv', lineterminator='\\n')\n",
     "    \n",
-    "    # Removing the summary column - it is already non-existent in the new version of the scaper\n",
-    "    df=df.drop(['summary'],axis=1)\n",
+    "    # Removing the summary column - it is already non-existent in the new version of the scraper\n",
+    "    #df=df.drop(['summary'],axis=1)\n",
     "    \n",
     "    # Converting scores anc counts\n",
     "    obj_to_numeric(df, ['user_score', 'user_pos', 'user_mixed', 'user_neg'])\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {
     "hidden": true
    },
@@ -180,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5933, 5)\n",
+      "(5930, 5)\n",
       "(60727, 5)\n",
       "(5869, 5)\n",
       "(11230, 5)\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "hidden": true
