Vast review - v1.0 of the document

--- a/data_gatherer.ipynb
+++ b/data_gatherer.ipynb
@@ -15,7 +15,6 @@
     "from time import sleep\n",
     "import random\n",
     "from random import randint\n",
-    "from urllib.parse import urlparse\n",
     "from urllib.error import HTTPError"
    ]
   },
@@ -221,10 +220,12 @@
    },
    "outputs": [],
    "source": [
-    "# Remain to be done\n",
+    "# Remains to be done\n",
+    "# !nada!\n",
+    "\n",
     "\n",
     "# Ongoing \n",
-    "console = 'wii-u'\n",
+    "# Uncomment here the console that you want to import\n",
     "\n",
     "#Those that are done\n",
     "#console = 'ps5'\n",
@@ -233,6 +234,7 @@
     "#console = 'switch'\n",
     "#console = 'ps4'\n",
     "#console = 'xbox-series-x'\n",
+    "#console = 'wii-u'\n",
     "\n",
     "#does not work\n",
     "# console = 'xbox360'\n",
@@ -271,6 +273,7 @@
    },
    "outputs": [],
    "source": [
+    "# Saving the list of link\n",
     "pickle.dump(games_links, open(f'raw_data/{console}_games_links', 'wb'))"
    ]
   },
@@ -282,6 +285,7 @@
    },
    "outputs": [],
    "source": [
+    "# If you need to restore a list of links\n",
     "#games_links = pickle.load(open(f'raw_data/{console}_games_links', 'rb'))"
    ]
   },
@@ -293,7 +297,6 @@
    },
    "outputs": [],
    "source": [
-    "#titles = {}; platforms = {}; summaries = {}; release_dates = {} \n",
     "titles = {}; platforms = {}; release_dates = {} \n",
     "developers = {}; genres = {}; ratings = {}; meta_scores = {}\n",
     "meta_overviews = {}; meta_pos = {}; meta_mixed = {}\n",
@@ -1133,11 +1136,9 @@
     "    soup = get_soup(f'http://www.metacritic.com{link}')\n",
     "\n",
     "    # game summary info\n",
-    "    #title, platform, summary, release_date, developer, genre, rating = get_game_info(soup)\n",
     "    title, platform, release_date, developer, genre, rating = get_game_info(soup)\n",
     "    titles[link] = title\n",
     "    platforms[link] = platform\n",
-    "    #summaries[link] = summary\n",
     "    release_dates[link] = release_date\n",
     "    developers[link] = developer\n",
     "    genres[link] = genre\n",
@@ -1157,6 +1158,7 @@
     "    meta_pos[link] = pos\n",
     "    meta_mixed[link] = mixed \n",
     "    meta_neg[link] = neg\n",
+    "    \n",
     "    # critics reviews\n",
     "    names, dates, scores = get_reviews(soup, 'critic')\n",
     "    critics_names[link] = names\n",
@@ -1196,20 +1198,6 @@
     "    #         users_scores[link] += scores\n",
     "    \n",
     "    bar.update()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 362,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Debugging\n",
-    "\n",
-    "# link=games_links[1]\n",
-    "# #print(link)\n",
-    "# soup = get_soup(f'http://www.metacritic.com{link}')\n",
-    "#names, dates, scores = get_reviews(soup, 'critic')"
    ]
   },
   {
